// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectFile should render 1`] = `
<div>
  <div
    class="p-2 mt-8 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
      data-testid="SelectFile__drop-zone"
    >
      <div
        class="mt-8 space-x-px"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <button
          class="relative font-semibold cursor-pointer focus:outline-none link group"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          Browse Files
        </button>
      </div>
      <div
        class="mt-2 text-sm font-semibold text-theme-secondary-500"
      >
        Supported format is 
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile should render with dwe file format 1`] = `
<div>
  <div
    class="p-2 mt-8 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
      data-testid="SelectFile__drop-zone"
    >
      <div
        class="sc-bdfBwQ gfGMlR"
        height="40"
        width="40"
      >
        <svg>
          dwe-file.svg
        </svg>
      </div>
      <div
        class="mt-8 space-x-px"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <button
          class="relative font-semibold cursor-pointer focus:outline-none link group"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          Browse Files
        </button>
      </div>
      <div
        class="mt-2 text-sm font-semibold text-theme-secondary-500"
      >
        Supported format is .dwe
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectFile should render with json file format 1`] = `
<div>
  <div
    class="p-2 mt-8 h-52 rounded-lg border-2 border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    data-testid="SelectFile"
  >
    <div
      class="h-full flex flex-col items-center justify-center rounded-lg transition-colors duration-200 bg-theme-primary-50 dark:bg-theme-secondary-800"
      data-testid="SelectFile__drop-zone"
    >
      <div
        class="sc-bdfBwQ gfGMlR"
        height="40"
        width="40"
      >
        <svg>
          json-file.svg
        </svg>
      </div>
      <div
        class="mt-8 space-x-px"
      >
        <span
          class="font-semibold"
        >
          Drag & Drop or
           
        </span>
        <button
          class="relative font-semibold cursor-pointer focus:outline-none link group"
          data-testid="SelectFile__browse-files"
          title="Click here to upload"
          type="button"
        >
          <div
            class="absolute inset-0 -m-1 rounded group-focus-visible group-focus:ring-2 ring-theme-primary-400"
          />
          Browse Files
        </button>
      </div>
      <div
        class="mt-2 text-sm font-semibold text-theme-secondary-500"
      >
        Supported format is .json
      </div>
    </div>
  </div>
</div>
`;
